@@ -22,8 +22,9 @@ $User->check_maintaneance_mode ();
 # strip input tags
 $_POST = $Admin->strip_input_tags($_POST);
 
-# validate csrf cookie
+# validate & remove csrf cookie
 $User->Crypto->csrf_cookie ("validate", "authmethods", $_POST['csrf_cookie']) === false ? $Result->show("danger", _("Invalid CSRF cookie"), true) : "";
+unset($_POST['csrf_cookie']);
 
 # get action
 $action = $_POST['action'];
