@@ -130,17 +130,6 @@ define('BASE', "/");
 if(!defined('MCUNIQUE'))
 define('MCUNIQUE', "section");
 
-
-/**
- * SAML mappings
- ******************************/
-if(!defined('MAP_SAML_USER'))
-define('MAP_SAML_USER', true);    // Enable SAML username mapping
-
-if(!defined('SAML_USERNAME'))
-define('SAML_USERNAME', 'admin'); // Map SAML to explicit user
-
-
 /**
  * Permit private subpages - private apps under /app/tools/custom/<custom_app_name>/index.php
  ******************************/
